# flexygent-new

./: .gitignore  flow.md  main.py  notes.txt  pyproject.toml  test.py
cf-llm-proxy/: auth.py  config.py  database.py  main.py  proxy_keys.db  requirements.txt  router.py
flexygent/: agent.py  client.py  types.py
flexygent/core/: config.py  types.py
flexygent/llm/: client.py
flexygent/tools/: __init__.py  base.py
