[project]
name = "flexygent"
version = "0.1.0"
description = "A minimal agentic AI framework built from scratch"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"